--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,109 +5,174 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/estilos.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/estilos2.css">
 	<title>Lleva y trae</title>
 </head>
 
 <body>
-	<h1>Contacto</h1>
-	<nav class="contenedor">
-		<img src="../Image/envio.png" alt="envio">
-		<ul class="menu">
-			<li><a href="../index.html">Inicio</a></li>
-			<li><a href="productos.html">Productos</a></li>
-			<li><a href="quienes-somos.html">Quienes somos</a></li>
-			<li id="contacto"><a href="contacto.html">Contacto</a></li>
-			<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-		</ul>
 
-		<label class="buscador">
-			<input type="search" placeholder="Necesito..."></imput>
-		</label>
+	<nav class="navegador">
+		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
+			<h1 class="fs-5 p-0 m-0 small fw-light">Contacto</h1>
+			<img src="../Image/envio.png" alt="envio" class="img-envio">
+		</div>
+
+		<div class="titulo">
+			<h1>Lleva y Trae</h1>
+		</div>
+
+
+		<div class="menu d-flex align-items-center">
+			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<label class="btn btn-outline-dark" for="btnradio1">
+					<p>Inicio</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio2">
+					<p>Productos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Quienes Somos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Contacto</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Preguntas Frecuentes</p>
+				</label>
+
+
+			</div>
+
+		</div>
+
+		<div class="buscador d-none d-sm-none d-md-block">
+			<label class="buscador-content">
+				<input type="search" placeholder="Necesito..." class="necesito mt-3"></imput>
+			</label>
+		</div>
+
 	</nav>
 
-	<main >		
-		<div class="main">
-			<div class="h2-contacto">
-				<h2>Contactacte con nosotros mediante el medio de comunicacion mas comodo para vos</h2>
-			</div>
-			
-			<div class="icon-whatsapp">
-				<span class="oculta-w"><p class="texto-aparece-w"> +54-291-12345678</p> </span>
-			</div>
-			<div  class="icon-facebook">
-				<span class="oculta-f"> /Llevaytrae</span>
-			</div>
-			<div  class="icon-instagram">
-				<span class="oculta-i"> /Llevaytrae</span>
-			</div>
-		</div>	
+	<main>
+		<div class="container">
+			<div class="main row">
+				<div class="mt-5 d-flex justify-content-center col-12 col-lg-12">
+					<h2 class="fw-b">¡Contactacte con nosotros!</h2>
+				</div>
+
 		
+
+				<div class="col-lg-6 pe-4">
+					<p class="my-5 fs-2 col-lg-6"> Esperamos tu consulta:</p>
+					<ul class="list-unstyled mb-4">
+						<li>
+							<span class="fs-4 mb-5"> La importancia de crear un vinculo</span>
+							<p class="mt-3">En <b>Lleva y Trae</b>, sabemos que entre nosotros pasan mas que productos,
+								y ofertas.
+								Somos una comunidad, y como tal, necesitamos vincularnos con vos, para poder ser cada
+								dia un poco mejor.</p>
+						</li>
+						<li>
+							<span class="fs-4 mb-5"> ¿Queres ser parte de nuestra plataforma <b>Beta</b>?</span>
+							<p class="mt-3">Constantemente nos encontramos desarrollando nuevas experiencias para
+								nuestros usuarios,
+								donde algunos pocos, pueden vivir las innovaciones antes que nadie, para informar
+								errores y mejorar cada dia. <br> ¿Queres ser parte?</p>
+						</li>
+						<li>
+							<span class="fs-4 mb-5"> Suma tus WinPoints</span>
+							<p class="mt-3">¿Sabias que con cada compra estas sumando puntos los miles de sorteos
+								semanales?<br>No
+								digan que no les avisamos!</p>
+						</li>
+					</ul>
+				</div>
+
+				<div class="col-lg-6 ps-4">
+					<p class="my-5 fs-2">Por favor, todos los campos son obligatorios...</p>
+					<div class=" mb-3 col">
+						<label>Nombre </label>
+						<input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+					</div>
+
+					<div class=" mb-3 col">
+						<label> Apellido </label>
+						<input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
+					</div>
+
+					<div class=" mb-3 col">
+						<label> E-mail </label>
+						<input type="email" class="form-control" placeholder="E-Mail" aria-label="E-Mail">
+					</div>
+
+					<div class=" mb-3 form-floating">
+						<select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+							<option selected>Sexo</option>
+							<option value="1">Masculino</option>
+							<option value="2">Feminino</option>
+							<option value="3">Otros</option>
+						</select>
+						<label for="floatingSelect">Sexo</label>
+					</div>
+
+					<div class=" mb-3 form-floating">
+						<select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+							<option selected>Tu consulta</option>
+							<option value="1">Politica devoluciones</option>
+							<option value="2">Solicitud de cambio por rotura</option>
+							<option value="3">Demora en envio</option>
+							<option value="4">Mi producto no llego</option>
+						</select>
+						<label for="floatingSelect">Consulta sobre...</label>
+					</div>
+
+					<div class="d-flex justify-content-center">
+						<button type="button" class="btn btn-secondary ">Enviar</button>
+					</div>
+		
+
+				</div>
+
+		
+
+
+			</div>
+
+			>
+		</div>
+
 	</main>
 
-	<form action="">
-		<h2>Consultas</h2>
-		<label>
-			<input type="text" placeholder="Nombre">
-		</label>
-		<label>
-			<input type="text" placeholder="Apellido"></label>
-		<label>
-			<input type="E-mail" placeholder="E-mail">
-		</label>
 
-		<div>
-			<p>Sexo</p>
-			<select name="" id="">
-		 		<option value="">Masculino</option>
-				<option value="">Femenino</option>
-				<option value="">Otros</option>
-			</select>
+	<footer class="footer">
+		<div class="div-wpp">
+			<p class="texto-wpp">291-12345678</p>
+			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
 		</div>
-
-		<div>
-			<p>¿Motivo de la consulta?</p>
-			<select name="" id="">
-				<option value="">Politica devoluciones</option>
-				<option value="">Solicitud de cambio por rotura</option>
-				<option value="">Demora en envio</option>
-				<option value="">Mi producto no llego</option>
-			</select>
+		<div class="div-face">
+			<p class="texto-face">/Llevaytrae</p>
+			<img src="../image/facebook.png" alt="facebook" class="img-face">
 		</div>
-		<fieldset>
-			<p>¿Es la primera vez que compras en <b>Lleva y Trae?<b></p>
-			<input type="radio" name="opcion"><span>Si</span>
-			<input type="radio" name="opcion"><span>No</span>
-			<p>¿Como conociste nuestra <i>pagina</i>?</p>
-			<input type="checkbox" name="" id=""><span>Publicidad en Television</span>
-			<input type="checkbox" name="" id=""><span>Busque un producto y me redirigio</span>
-			<input type="checkbox" name="" id=""><span>Recomendacion de un amigo</span>
-			<input type="checkbox" name="" id=""><span>Me llego un E-Mail</span>
-			<textarea name="" id="" cols="110" rows="4" placeholder="Escribe aqui tu consulta...">
-					</textarea>
-		</fieldset>
-		<imput type="submit" value="envio" id="" /><span>Enviar</span>
-	</form>
-
-	<footer class="pie">
-		<h2><b>Navegación</b></h2>
-		<ul>
-			<li><a href="../index.html">Inicio</a></li>
-			<li><a href="productos.html">Productos</a></li>
-			<li><a href="quienes-somos.html">Quienes somos</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-			<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-		</ul>
-		<h2><b>Medios de pago</b></h2>
-		<img src="../image/img-formasdepago.png" alt="formas de pago" />
-		<h2><b>Contactanos</b></h2>
-		<ul>
-			<li>+54-0291-12345678</li>
-			<li>LlevayTrae@gmail.com</li>
-			<li>Facebook: /Llevaytrae</li>
-			<li>Instagram: /Llevaytrae</li>
-		</ul>
+		<div class="div-insta">
+			<p class="texto-insta">/Llevaytrae</p> 
+			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+		</div>
 	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
