--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -1,59 +1,243 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../css/estilos.css">
-		<title>LLeva y Trae</title>
-	</head>
 
-	<body>
-		<h1>Productos</h1>
-		<nav class="contenedor">	
-			<img src="../Image/envio.png" alt="envio">
-			<ul class="menu">
-				<li><a href="../index.html">Inicio</a></li>
-				<li id="productos"><a href="productos.html">Productos</a></li>
-				<li><a href="quienes-somos.html">Quienes somos</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-			</ul>
-			<label class="buscador">
-				<input type="search" placeholder="Necesito..."></imput>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/estilos2.css">
+	<title>Lleva y trae</title>
+</head>
+
+<body>
+
+	<nav class="navegador">
+		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
+			<h1 class="fs-5 p-0 m-0 small fw-light">Productos</h1>
+			<img src="../image/envio.png" alt="envio" class="img-envio">
+		</div>
+
+		<div class="titulo">
+			<h1>Lleva y Trae</h1>
+		</div>
+
+
+		<div class="menu d-flex align-items-center">
+			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<label class="btn btn-outline-dark" for="btnradio1">
+					<p>Inicio</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio2">
+					<p>Productos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Quienes Somos</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Contacto</p>
+				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Preguntas Frecuentes</p>
+				</label>
+
+
+			</div>
+
+		</div>
+
+		<div class="buscador d-none d-sm-none d-md-block">
+			<label class="buscador-content">
+				<input type="search" placeholder="Necesito..." class="necesito mt-3"></imput>
 			</label>
-		</nav>
-		<h2>Categorias</h2>
-		<ol>
-			<li>Tecnologia</li>
-			<li>Moda</li>
-			<li>Deco Hogar</li>
-			<li>Electrodomesticos</li>
-			<li>Herramientas</li>
-			<li>Deportes y Fitness</li>
-			<li>Suplementos Dietarios</li>
-			<li>PetShop</li>
-			<li>Novedades</li>
-			<li>Mas Vendidos</li>
-		</ol>
-		<footer>
-			<h2><b>Navegación</b></h2>
-			<ul>
-				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="productos.html">Productos</a></li>
-				<li><a href="quienes-somos.html">Quienes somos</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
-				<li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
+		</div>
+	</nav>
+
+
+
+	<main class="grid-main-productos">
+
+
+		<div class="titulo-categoria mt-4 d-none d-sm-none d-md-none d-lg-flex justify-content-center">
+			<h2 class="my-5">
+				<p> Categorias </p>
+			</h2>
+		</div>
+
+		<div class="categorias d-none d-sm-none d-md-none d-lg-flex">
+			<ul class="listado">
+				<li><a href="#"> Tecnologia</a></li>
+				<li><a href="#"> Moda </a></li>
+				<li><a href="#">Deco Hogar</a></li>
+				<li><a href="#"> Electrodomesticos</a></li>
+				<li><a href="#"> Herramientas </a></li>
+				<li><a href="#"> Deportes y Fitness</a></li>
+				<li><a href="#"> Suplementos dietarios</a></li>
+				<li><a href="#">PetShop</a></li>
+				<li><a href="#"> Novedades</a></li>
+				<li><a href="#"> Mas Vendidos </a></li>
 			</ul>
-			<h2><b>Medios de pago</b></h2>
-			<img src="../image/img-formasdepago.png" alt="formas de pago"/>
-			<h2><b>Contactanos</b></h2>
-				<ul>
-					<li>+54-0291-12345678</li>
-					<li>LlevayTrae@gmail.com</li>
-					<li>Facebook: /Llevaytrae</li>
-					<li>Instagram: /Llevaytrae</li>
-				</ul>
-		</footer>
-	</body>
+		</div>
+
+		<div class="productos-area mb-5 mt-4 d-flex justify-content-center">
+			<div class="mx-4 mt-3">
+
+				<div class="card mb-3 productos-area" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4 d-flex align-items-center">
+							<img src="../Image/gamer.jpg" class="img-fluid rounded-start" alt="...">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Silla Gamer</h5>
+								<p class="card-text">Jugá sin límites
+									Diseñada para quienes pasan muchas horas frente a la computadora. El asiento y el
+									respaldo se adaptan a tus diferentes posiciones a lo largo del juego.</p>
+								<p class="card-text">
+									<p class="fs-4">$ 45.800</p>
+									<small class="text-muted">Agregar al carrito</small>
+									<button type="button" class="carrito ">tamaño 222</button>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="card mb-3 productos-area" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4 d-flex align-items-center">
+							<img src="../Image/pava.jpg" class="img-fluid rounded-start" alt="...">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Pava Electrica</h5>
+								<p class="card-text">¡Tené el agua caliente siempre lista! Con la pava eléctrica Liliana
+									AP975 vas a poder disfrutar de una bebida caliente en minutos. Ganá tiempo y prepará
+									ese mate, cafecito o porqué no, esa sopa instantánea que tanto te gusta.</p>
+								<p class="card-text">
+									<p class="fs-4">$ 6.500</p>
+									<small class="text-muted">Agregar al carrito</small>
+									<button type="button" class="carrito ">tamaño 222</button>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+
+				<div class="card mb-3 productos-area" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4 d-flex align-items-center">
+							<img src="../Image/sillon.jpg" class="img-fluid rounded-start" alt="...">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Sillon</h5>
+								<p class="card-text">Hermoso diseño clásico capitoné. Elegante y robusto.
+									Elegí el diseño que mas te guste. Podes combinar las tachas (colores) y las patas de
+									madera (color de lustre)</p>
+								<p class="card-text">
+									<p class="fs-4">$ 34.650</p>
+									<small class="text-muted">Agregar al carrito</small>
+									<button type="button" class="carrito ">tamaño 222</button>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="card mb-3 productos-area" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4 d-flex align-items-center">
+							<img src="../Image/notebook.png" class="img-fluid rounded-start" alt="...">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Notebook Sony</h5>
+								<p class="card-text">Diseño compacto, ligero y minimalista.
+									Diseñada al detalle para poder
+									transportarla y disfrutarla fácilmente.
+
+									1 TB SATA
+
+									Windows® 10 Home
+
+									Teclado con ergonomía Tilt</p>
+								<p class="card-text">
+									<p class="fs-4">$ 145.800</p>
+									<small class="text-muted">Agregar al carrito</small>
+									<button type="button" class="carrito ">tamaño 222</button>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="card mb-3 productos-area" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4 d-flex align-items-center">
+							<img src="../Image/tv2.jpg" class="img-fluid rounded-start" alt="...">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Televisor Samsung 50´ 4k Full Hd</h5>
+								<p class="card-text">Viví en 4K
+									La cantidad de pixeles que ofrece es 4 veces mayor que la Full HD, ¿el resultado?
+									Escenas mucho más realistas y con un nivel de detalle increíble. Ahora vas a conocer
+									una aventura de inmersión que no va a dejar de sorprenderte.</p>
+								<p class="card-text">
+									<p class="fs-4">$ 45.800</p>
+									<small class="text-muted">Agregar al carrito</small>
+									<button type="button" class="carrito ">tamaño 222</button>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+
+
+			</div>
+
+		</div>
+
+
+	</main>
+
+	<footer class="footer">
+		<div class="div-wpp">
+			<p class="texto-wpp">291-12345678</p>
+			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+		</div>
+		<div class="div-face">
+			<p class="texto-face">/Llevaytrae</p>
+			<img src="../image/facebook.png" alt="facebook" class="img-face">
+		</div>
+		<div class="div-insta">
+			<p class="texto-insta">/Llevaytrae</p> 
+			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+		</div>
+	</footer>
+
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
