--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -24,7 +24,7 @@
 			<h1>Lleva y Trae</h1>
 		</div>
 
-		<div class="menu d-flex align-items-start">
+		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
 				<label class="btn btn-outline-dark" for="btnradio1">
@@ -58,7 +58,7 @@
 
 		<div class="buscador d-none d-sm-none d-md-block">
 			<label class="buscador-content">
-				<input type="search" placeholder="Necesito..." class="necesito"></imput>
+				<input type="search" placeholder="Necesito..." class="mt-3 necesito"></imput>
 			</label>
 		</div>
 	</nav>
@@ -66,10 +66,9 @@
 
 	<div class="mt-3">
 		<h2 class="fw-bold text-center mt-1">Sobre nosotros...</h2>
-
 	</div>
 
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur
+	<p class="m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium numquam asperiores, omnis consequuntur
 		distinctio perferendis earum culpa hic error ratione eum deserunt non debitis qui quisquam cum temporibus
 		pariatur.
 	</p>
@@ -157,11 +156,12 @@
 			<hr />
 		</p>
 	</div>
+
 	<div class="conteiner">
 		<div class="row mt-5">
 			<div class="col-6 col-sm-12">
 				<h2 class="fw-normal text-center mb-2">Camino a los 10 años en el mercado</h2>
-				<p class="mt-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
+				<p class="mt-4 m-p"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae quisquam
 					reprehenderit fugiat atque fuga
 					voluptatem iure unde, explicabo cumque libero nulla nemo facilis, delectus ratione! Qui dolore sint
 					neque?
@@ -171,14 +171,14 @@
 
 			<div class="col-6 col-sm-12">
 				<h2 class="fw-normal text-center mb-2">¿Qué queremos lograr?</h2>
-				<p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
+				<p class="mt-4 m-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quaerat hic pariatur!
 					Hic, excepturi labore
 					nemo dolore esse ad saepe fugit at magnam. Eos ex, vero ipsam non officia tempora!</p>
 			</div>
 
 			<div class="col-12 col-sm-12">
 				<h2 class="fw-normal text-center mb-2">Mision, Vision y Valores</h2>
-				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus
+				<p class="mt-4 m-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat voluptatibus
 					aperiam facere tempora!
 					Provident, nemo officiis. Enim tempore placeat natus odio perspiciatis suscipit aliquid. Ex est
 					libero esse
@@ -191,9 +191,7 @@
 
 
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-	</script>
+	
 	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
@@ -207,6 +205,11 @@
 			<p class="texto-insta">/Llevaytrae</p>
 			<img src="../image/instagram.png" alt="instagram" class="img-insta">
 		</div>
+	</footer>	
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
